--- a/CRM2/ClientApp/src/app/login/login.component.html
+++ b/CRM2/ClientApp/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 
       <!-- Icon -->
       <div class="fadeIn first">
-        <img src="https://www.flaticon.com/svg/static/icons/svg/1801/1801662.svg" id="icon" alt="User Icon" />
+        <img src="https://st3.depositphotos.com/6935094/12490/v/950/depositphotos_124905844-stock-illustration-logo-veterinary-clinic.jpg" id="icon" alt="User Icon" />
       </div>
 
       <!-- Login Form -->
