--- a/CRM2/ClientApp/src/app/login/login.component.html
+++ b/CRM2/ClientApp/src/app/login/login.component.html
@@ -4,9 +4,9 @@
     <form #loginForm="ngForm" (submit)="login()">
       <mat-card>
         <mat-card-title>
-          <img src="https://image.freepik.com/free-vector/mascot-logo-dog-animal-care_147838-2.jpg" alt="Avatar">
+          <img src="https://images.vexels.com/media/users/3/145600/isolated/preview/290e1a100e95214228126e4bda8e3851-cow-avatar-by-vexels.png" alt="Avatar">
           <br />
-          <div class="name">VET-CRM</div>
+
         </mat-card-title>
 
         <mat-card-content>
