--- a/CRM2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CRM2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,9 +3,57 @@
     <ul>
       <li class="has-subnav">
         <a href="#">
-          <i class="fa fa-folder-open fa-2x"></i>
+          <i class="fa fa-home fa-2x"></i>
           <span class="nav-text">
             Strona Główna
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-list fa-2x"></i>
+          <span class="nav-text">
+            Wizyty
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-folder-open fa-2x"></i>
+          <span class="nav-text">
+            Klienci
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-folder-open fa-2x"></i>
+          <span class="nav-text">
+            Produkty
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-folder-open fa-2x"></i>
+          <span class="nav-text">
+            Usługi
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-table fa-2x"></i>
+          <span class="nav-text">
+            Zadania
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-info fa-2x"></i>
+          <span class="nav-text">
+            Ustawienia profulu
           </span>
         </a>
       </li>
@@ -20,5 +68,6 @@
           </span>
         </a>
       </li>
+   
     </ul>
   </nav>
