--- a/CRM2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CRM2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,17 +11,17 @@
       </li>
       <li>
         <a href="#">
-          <i class="fa fa-list fa-2x"></i>
+          <i class="fa fa-folder-open fa-2x"></i>
           <span class="nav-text">
-            Wizyty
+            Klienci
           </span>
         </a>
       </li>
       <li>
         <a href="#">
-          <i class="fa fa-folder-open fa-2x"></i>
+          <i class="fa fa-list fa-2x"></i>
           <span class="nav-text">
-            Klienci
+            Wizyty
           </span>
         </a>
       </li>
@@ -38,6 +38,14 @@
           <i class="fa fa-folder-open fa-2x"></i>
           <span class="nav-text">
             Usługi
+          </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-folder-open fa-2x"></i>
+          <span class="nav-text">
+            Lekarze
           </span>
         </a>
       </li>
