--- a/CRM2/ClientApp/src/app/head/head.component.html
+++ b/CRM2/ClientApp/src/app/head/head.component.html
@@ -1,5 +1,14 @@
 <app-nav-menu></app-nav-menu>
 <body>
-  <div class="area"></div>
+  <div class="area">
+    <button mat-stroked-button color="accent" type="submit">Dodaj<mat-icon>add</mat-icon></button><button mat-stroked-button color="accent" type="submit">Odśwież<mat-icon>refresh</mat-icon></button><button mat-stroked-button color="accent" type="submit">Export <mat-icon>cloud_download</mat-icon></button><button mat-stroked-button color="accent" style="float:right;">Zakładka klienci</button>
+    <ag-grid-angular style="width: 100%; height: 70%; background-color:black; margin-top:1%;"
+                     class="ag-theme-alpine"
+                     [rowData]="rowData"
+                     [columnDefs]="columnDefs">
+    </ag-grid-angular>
+
+
+  </div>
 </body>
 
