--- a/CRM2/ClientApp/src/app/head/head.component.html
+++ b/CRM2/ClientApp/src/app/head/head.component.html
@@ -5,9 +5,13 @@
     <ag-grid-angular style="width: 100%; height: 70%; background-color:black; margin-top:1%;"
                      class="ag-theme-alpine"
                      [rowData]="rowData"
-                     [columnDefs]="columnDefs">
+                     [columnDefs]="columnDefs"
+                     [frameworkComponents]="frameworkComponents">
     </ag-grid-angular>
-
+  
+    <pre>{{rowDataClicked1 | json}}</pre>
+    <pre>{{rowDataClicked2 | json}}</pre>
+    <pre>{{rowDataClicked3 | json}}</pre>
 
   </div>
 </body>
