--- a/CRM2/ClientApp/src/styles.css
+++ b/CRM2/ClientApp/src/styles.css
@@ -22,3 +22,7 @@ code {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.custom-dialog > mat-dialog-container {
+  background-color: hsla(0, 0%, 0%, 1)
+}
