Animal Component Add

--- a/CRM2/ClientApp/src/app/login/login.component.html
+++ b/CRM2/ClientApp/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <form #loginForm="ngForm" (submit)="login()">
       <mat-card>
         <mat-card-title>
-          <img src="https://images.vexels.com/media/users/3/145600/isolated/preview/290e1a100e95214228126e4bda8e3851-cow-avatar-by-vexels.png" alt="Avatar">
+          <img src="https://cdn2.iconfinder.com/data/icons/agriculture-business-1/512/xxx002-512.png" alt="Avatar">
           <br />
 
         </mat-card-title>
