--- a/CRM2/ClientApp/src/app/_dialog/vet/edit/vet-edit-dialog/vet-edit-dialog.component.html
+++ b/CRM2/ClientApp/src/app/_dialog/vet/edit/vet-edit-dialog/vet-edit-dialog.component.html
@@ -1,1 +1,50 @@
-<p>vet-edit-dialog works!</p>
+
+
+
+<h3 mat-dialog-title color="accent">
+  <button mat-icon-button color="warn" (click)="dialog.closeAll()">
+    <mat-icon>cancel</mat-icon>
+    Edytowanie
+  </button>
+</h3>
+<form #vetEditForm="ngForm" (submit)="editVet()">
+  <div style="width: 50%; float:left">
+    <mat-form-field>
+      <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_name" name="vet_name" type="text" matInput placeholder="Imię" required>
+    </mat-form-field>
+    <br />
+    <mat-form-field>
+      <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_adress" name="vet_adress" type="text" matInput placeholder="Adres" required>
+    </mat-form-field>
+    <br />
+    <mat-form-field>
+      <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_city" name="vet_city" type="text" matInput placeholder="Miasto" required>
+    </mat-form-field>
+    <br />
+    <mat-form-field>
+      <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_med_rec_site" name="vet_med_rec_site" type="text" matInput placeholder="Strona www" required>
+    </mat-form-field>
+  </div>
+  <div style="width: 50%; float:right">
+    <div mat-dialog-content>
+      <mat-form-field>
+        <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_state" name="vet_state" type="text" matInput placeholder="Województwo" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_zip" name="vet_zip" type="text" matInput placeholder="Kod pocztowy" required>
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_phone" name="vet_phone" type="text" matInput placeholder="Telefon" required>
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input [(ngModel)]="dataFromMotherComponent.anyProperty.vet_email" name="vet_email" type="text" matInput placeholder="Email" required>
+      </mat-form-field>
+    </div>
+    <div mat-dialog-actions>
+      <button [disabled]="!vetEditForm.valid" type="submit" mat-stroked-button color="accent" cdkFocusInitial>Akceptuje</button>
+      <button mat-stroked-button color="warn" type="button" (click)="dialog.closeAll()"><mat-icon>cancel</mat-icon>Nie dziękuje</button>
+    </div>
+  </div>
+</form>
