--- a/CRM2/ClientApp/src/app/vet/vet.component.html
+++ b/CRM2/ClientApp/src/app/vet/vet.component.html
@@ -5,7 +5,7 @@
 
     <button mat-stroked-button color="accent" type="submit" (click)="openDialogAdd()">Dodaj<mat-icon>add</mat-icon></button>
     <button mat-stroked-button color="accent" type="submit" (click)="refresh()">Odśwież<mat-icon>refresh</mat-icon></button>
-    <button mat-stroked-button color="accent" type="submit">Export <mat-icon>cloud_download</mat-icon></button><button mat-stroked-button color="accent" style="float:right;">Zakładka klienci</button>
+    <button mat-stroked-button color="accent" type="submit">Export <mat-icon>cloud_download</mat-icon></button><button mat-stroked-button color="accent" style="float:right;">Zakładka Weterynarze </button>
     <ag-grid-angular style="width: 95%; height: 70%; background-color:black; margin:2%;"
                      class="ag-theme-alpine"
                      [rowData]="rowData"
