--- a/CRM2/ClientApp/src/app/_dialog/vet/add/vet-add-dialog/vet-add-dialog.component.html
+++ b/CRM2/ClientApp/src/app/_dialog/vet/add/vet-add-dialog/vet-add-dialog.component.html
@@ -8,7 +8,7 @@
   </button>
 </h3>
 
-<form #vetAddForm="ngForm" (submit)="addOwner()">
+<form #vetAddForm="ngForm" (submit)="addVet()">
   <div style="width: 50%; float:left">
     <mat-form-field>
       <input [(ngModel)]="model.vet_name" name="vet_name" type="text" matInput placeholder="Imię" required>
