--- a/CRM2/ClientApp/src/app/dicvacine/dicvacine.component.html
+++ b/CRM2/ClientApp/src/app/dicvacine/dicvacine.component.html
@@ -5,19 +5,13 @@
 
     <button mat-stroked-button color="accent" type="submit" (click)="openDialogAdd()">Dodaj<mat-icon>add</mat-icon></button>
     <button mat-stroked-button color="accent" type="submit" (click)="refresh()">Odśwież<mat-icon>refresh</mat-icon></button>
-    <button mat-stroked-button color="accent" type="submit">Export <mat-icon>cloud_download</mat-icon></button><button mat-stroked-button color="accent" style="float:right;">Szczepionki</button>
+    <button mat-stroked-button color="accent" type="submit">Export <mat-icon>cloud_download</mat-icon></button><button mat-stroked-button color="accent" style="float:right;">Zakładka szczepionki</button>
     <ag-grid-angular style="width: 95%; height: 70%; background-color:black; margin:2%;"
                      class="ag-theme-alpine"
                      [rowData]="rowData"
                      [columnDefs]="columnDefs"
                      [frameworkComponents]="frameworkComponents">
     </ag-grid-angular>
-
-
-
-
-
-
 
 
 
