--- a/CRM2/ClientApp/src/app/login/login.component.html
+++ b/CRM2/ClientApp/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <form #loginForm="ngForm" (submit)="login()">
       <mat-card>
         <mat-card-title>
-          <img src="https://cdn2.iconfinder.com/data/icons/agriculture-business-1/512/xxx002-512.png" alt="Avatar">
+          <img src="https://img.freepik.com/darmowe-wektory/dog-cat-logo-szablon-weterynaria_56473-122.jpg?size=338&ext=jpg" alt="Avatar">
           <br />
 
         </mat-card-title>
