--- a/CRM2/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/CRM2/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -2,7 +2,7 @@
   <nav class="main-menu">
     <ul>
       <li class="has-subnav">
-        <a href="#">
+        <a routerLink="/head" routerLinkActive="active">
           <i class="fa fa-home fa-2x"></i>
           <span class="nav-text">
             Strona Główna
@@ -10,7 +10,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a routerLink="/head" routerLinkActive="active">
           <i class="fa fa-folder-open fa-2x"></i>
           <span class="nav-text">
             Klienci
@@ -18,7 +18,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a routerLink="/visits" routerLinkActive="active">
           <i class="fa fa-list fa-2x"></i>
           <span class="nav-text">
             Wizyty
@@ -26,7 +26,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a routerLink="/dicmed" routerLinkActive="active">
           <i class="fa fa-folder-open fa-2x"></i>
           <span class="nav-text">
             Produkty
@@ -34,7 +34,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a routerLink="/dicservice" routerLinkActive="active">
           <i class="fa fa-folder-open fa-2x"></i>
           <span class="nav-text">
             Usługi
@@ -42,7 +42,15 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a routerLink="/dicvacine" routerLinkActive="active">
+          <i class="fa fa-folder-open fa-2x"></i>
+          <span class="nav-text">
+            Szczepienia
+          </span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/vet" routerLinkActive="active">
           <i class="fa fa-folder-open fa-2x"></i>
           <span class="nav-text">
             Lekarze
