--- a/CRM2/ClientApp/src/app/_dialog/dicMed/add/dicmed-add-dialog/dicmed-add-dialog.component.html
+++ b/CRM2/ClientApp/src/app/_dialog/dicMed/add/dicmed-add-dialog/dicmed-add-dialog.component.html
@@ -1,1 +1,33 @@
-<p>dicmed-add-dialog works!</p>
+
+
+
+<h3 mat-dialog-title color="accent">
+  <button mat-icon-button color="warn" (click)="dialog.closeAll()">
+    <mat-icon>cancel</mat-icon>
+    Dodawanie
+  </button>
+</h3>
+
+<form #serviceAddForm="ngForm" (submit)="addMed()">
+  <div style="width: 50%; float:left">
+    <mat-form-field>
+      <input [(ngModel)]="model.dic_meds_name" name="dic_meds_name" type="text" matInput placeholder="Nazwa produktu" required>
+    </mat-form-field>
+  </div>
+
+  <div style="width: 50%; float:right">
+    <div mat-dialog-content>
+      <mat-form-field>
+        <input (keypress)="numberOnly($event)" [(ngModel)]="model.Price" name="Price" type="text" matInput placeholder="Cena produktu" required>
+      </mat-form-field>
+    </div>
+    <div mat-dialog-actions>
+
+      <button [disabled]="!serviceAddForm.valid" type="submit" mat-stroked-button color="accent" cdkFocusInitial>Dodaj</button>
+      <button mat-stroked-button color="warn" type="button" (click)="dialog.closeAll()"><mat-icon>cancel</mat-icon>Nie dziękuje</button>
+
+
+
+    </div>
+  </div>
+</form>
