--- a/CRM2/ClientApp/src/app/head/head.component.css
+++ b/CRM2/ClientApp/src/app/head/head.component.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://img1.goodfon.com/original/1920x1080/d/f8/voronoy-kon-loshad-vetki.jpg');
+  background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/dfbdc430671987.570216e669d64.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
