--- a/CRM2/ClientApp/src/app/visit/visit.component.html
+++ b/CRM2/ClientApp/src/app/visit/visit.component.html
@@ -1,1 +1,26 @@
-<p>visit works!</p>
+<app-nav-menu></app-nav-menu>
+<body>
+  <div class="area">
+
+
+    <button mat-stroked-button color="accent" type="submit" (click)="openDialogAdd()">Dodaj<mat-icon>add</mat-icon></button>
+    <button mat-stroked-button color="accent" type="submit" (click)="refresh()">Odśwież<mat-icon>refresh</mat-icon></button>
+    <button mat-stroked-button color="accent" type="submit">Export <mat-icon>cloud_download</mat-icon></button><button mat-stroked-button color="accent" style="float:right;">Zakładka klienci</button>
+    <ag-grid-angular style="width: 95%; height: 70%; background-color:black; margin:2%;"
+                     class="ag-theme-alpine"
+                     [rowData]="rowData"
+                     [columnDefs]="columnDefs"
+                     [frameworkComponents]="frameworkComponents">
+    </ag-grid-angular>
+
+
+
+
+
+
+
+
+
+  </div>
+</body>
+
