--- a/CRM2/ClientApp/src/app/_dialog/visit/add/visit-add-dialog/visit-add-dialog.component.html
+++ b/CRM2/ClientApp/src/app/_dialog/visit/add/visit-add-dialog/visit-add-dialog.component.html
@@ -29,7 +29,7 @@
   <div style="width: 50%; float:right">
     <div mat-dialog-content>
       <mat-form-field>
-        <mat-select [(ngModel)]="model.visit_doctor" name="visit_doctor">
+        <mat-select [(ngModel)]="model.vet_id" name="visit_doctor">
           <mat-option *ngFor="let vet of veterinary" [value]="vet.Id" >
             Lek. Vet. {{vet.vet_name}}
           </mat-option>
